tests/neg-custom-args/captures/i19330.check
-- Error: tests/neg-custom-args/captures/i19330.scala:15:29 ------------------------------------------------------------
15 |  val leaked = usingLogger[x.T]: l =>  // error
   |                           ^^^
   |                           Type variable T of method usingLogger cannot be instantiated to x.T since
   |                           the part () => Logger^ of that type captures the root capability `any`.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i19330.scala:17:4 ----------------------------------------
17 |    t: x.T // error
   |    ^
   |    Found:    () ->{t} Logger^{t*}
   |    Required: x.T
   |
   |    Note that capability `t` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/i19330.scala:16:14 ------------------------------------------------------------
16 |    val t: () => Logger^ = () => l // error
   |           ^^^^^^^^^^^^^
   |           Separation failure: value t's type () => Logger^ hides parameter l.
   |           The parameter needs to be annotated with consume to allow this.
